# simple_delta_robot

./: LICENSE  README.md
simple_delta_robot_description/: CMakeLists.txt  package.xml
simple_delta_robot_description/config/: ros_control.yaml  rviz.rviz
simple_delta_robot_description/launch/: load_robot.launch
simple_delta_robot_description/urdf/: delta_arm.gazebo.xacro  delta_arm.xacro  delta_robot.gazebo.xacro  delta_robot.xacro  materials.xacro
