<?xml version="1.0"?>
<package format="2">
  <name>simple_delta_robot_description</name>
  <version>1.2.5</version>
  <description>
      Test for parallel connected links
  </description>

  <author>Andy Chien</author>
  <maintainer email="808790017@gms.tku.edu.tw">Andy Chien</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>roslaunch</test_depend>
</package>
